--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,11 @@ a:hover{
     width: 25%;
     transition: .9s;
 }
+#colour #greeen:hover{
+ color: green;
+ transition: .9s;
+}
+#colour #reed:hover{
+  color:red;
+  transition: .9s;
+}
