--- a/css/style.css
+++ b/css/style.css
@@ -85,14 +85,14 @@ a:hover{
 }
 #colour{
   display: flex;
-  text-align: center;
+  text-align: center(left);
 }
 #colour #reed{
   display: flex;
-  text-align: center;
+  text-align: center(left);
 }
 #colour #green{
   display: flex;
-  text-align: center;
+  text-align: center(left);
 }
 /* plz */
